--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -206,7 +206,7 @@
 					<p>Embarqués dans des logiciels assez connus</p>
 					<p>Players Spotify, Pandora, Mail.app/iWork/iTunes/App Stores</p>
 					<p>Steam, Battle.net, Kindle Amazon</p>
-					<p>consoles Sony, Nintendo, outils Adobe</p>
+					<p>consoles Sony, Nintendo, outils Adobe (AEM Forms, Acrobat)</p>
 					<p>... de récents commits de Sony, la PS5 se profile</p>
 					<p>Nintendo Switch hackée à cause d'un vieux WebKit</p>
 					<img src="mario.png" width="300px" alt="">
@@ -221,10 +221,11 @@
 						<li>1994 Naissance de Netscape Navigator issu de Mosaic - 2nd navigateur, supporte les images et forms</li>
 						<li>1998 Naissance de KHTML/KJS issus de Konqueror (KDE, Linux), Netscape s'open source et crée Mozilla (Mosaic killer)</li>
 						<li>2001 Apple forke KHTML/KJS en WebKit : WebCore + JavascriptCore. Préféré à Gecko/Netscape</li>
-						<li>2003 AOL crée la Fondation Mozilla, à but non lucratif</li>
-						<li>2005 Apple open source quelques modifications de code pour Konqueror</li>
-						<li>2007 L'iPhone sort avec Safari 3 sous WebKit</li>
-						<li>2008 Google lance Android et Chrome sous WebKit</li>
+						<li>2003 Naissance de Safari sous WebKit, AOL crée la Fondation Mozilla, à but non lucratif</li>
+						<li>2005 Apple Open Source tout WebKit - pas seulement WebCore et JavascriptCore</li>
+						<li>2007 L'iPhone sort avec Safari 3, vision de Jobs : les Apps seront des pages HTML sous Safari</li>
+						<li>2008 Google lance Android et Chrome sous WebKit, Apple lance le 1er SDK iOS... il n'y aura pas d'Apps HTML</li>
+						<li>2009 Proche divorce "on reste amis" entre Apple et KDE, code d'Apple était difficile à backporter en Open Source</li>
 						<li>2011 Apple demande à trademarker WebKit, RIM pas trop d'accord</li>
 						<li>2013 Mozilla crée Servo, Google forke WebKit en Blink, Opera abandonne Presto pour Blink, WebKit devient trademark Apple. Blink est un fork technique et business</li>
 						<li>2014/5 Microsoft remplace Trident par EdgeHTML</li>
