--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -322,8 +322,9 @@
 					</section>
 
 					<section>
-<img src="graphicscontext.png"/>
-<p>Exemple de ports pour le rendu graphique : https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/platform/graphics?order=date&desc=1/</p>
+<img width="400px" src="graphicscontext.png"/>
+<img width="500px" src="gcports.png"/>
+<p>Exemple de ports pour le rendu graphique : <a href="https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/platform/graphics?order=date&desc=1/">https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/platform/graphics?order=date&desc=1/</a></p>
 					</section>
 
 					<section>
