--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -52,9 +52,10 @@
 				<section>
 					<h2>"Du HTML aux pixels"</h2>
 					<h3>Une brève histoire des moteurs du Web</h3>
-					<h3>Comment fonctionne un moteur de rendu ?</h3>
 					<h3>Talk 1/2</h3>
-					<p>Hôte TBD / Meetup Web front #2</p>
+					<h3>Comment fonctionne un moteur de rendu ?</h3>
+					<h3>Talk 2/2</h3>
+					<p>Hôte TBD / Meetup Web Front #2</p>
 					<img src="mth.jpg" width="100px"/>
 				</section>
 
